[gd_scene load_steps=2 format=2]

[ext_resource path="res://dialogueUI.gd" type="Script" id=1]

[node name="DialogueUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -511.0
margin_top = -146.0
margin_right = 511.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speakerName" type="Label" parent="DialogueContainer"]
margin_right = 1022.0
margin_bottom = 14.0
text = "Name Goes Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="ColorRect" parent="DialogueContainer"]
margin_top = 18.0
margin_right = 1022.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.117647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speakerDialogue" type="RichTextLabel" parent="DialogueContainer/DialogueBox"]
margin_left = 18.0
margin_top = 14.0
margin_right = 966.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Dialogue Text Goes Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogueContainer/DialogueBox"]

[node name="dialogueCompleteIndicator" type="Polygon2D" parent="DialogueContainer/DialogueBox"]
